# hackathon

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CRUD_ENDPOINTS_SUMMARY.md  DEPLOY.md  IMPROVEMENTS.md  Makefile  ORGANIZATION_SUMMARY.md  PROJECT_README.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  VULTR_DEPLOY.md  conftest.py  dev-requirements.txt  docker-compose.yml  package-lock.json  package.json  presentation.md  project_description.md  pyproject.toml  requirements.txt  start.sh  test_crud_endpoints.py  test_mock.py  ticket-assistant.code-workspace
backend/: README.md  conftest.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup_database.py  ticket_assistant.db
backend/src/ticket_assistant/: __init__.py
backend/src/ticket_assistant/api/: classification.py  classifications.py  combined.py  dashboard.py  health.py  main.py  reports.py  tickets.py
backend/src/ticket_assistant/core/: __init__.py  config.py  models.py
backend/src/ticket_assistant/database/: connection.py  database_service.py  models.py  seed_data.py
backend/src/ticket_assistant/database/repositories/: __init__.py  ticket_repository.py
backend/src/ticket_assistant/services/: database_services.py  groq_classifier.py
backend/tests/integration/: test_api_integration.py
backend/tests/unit/: test_main.py  test_report_service.py
brainstorm/: Hackathon.md  Prosus.md  Qualcomm.md  Vultr.md
config/: .env.example
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: API.md  BRAINSTORM.md  DEPLOYMENT.md  DEVELOPMENT.md  FRONTEND_ARCHITECTURE.md  HACKATHON.md  README.md  TOOLS.md  UV_GUIDE.md  UV_MIGRATION_SUMMARY.md
examples/: example_usage.py
frontend/: README.md  README_SIMPLE.md  SETUP_COMPLETE.md  index.html  package-lock.json  package.json  status-check.js  tailwind.config.js  test-suite.html  tsconfig.app.json  vite.config.ts
frontend/public/: mock-data-generator.js  mock-generator.html
frontend/src/: App.tsx  index.css  main.tsx  router.tsx  test-api.ts
frontend/src/components/: ClassificationPreview.tsx  ErrorBoundary.tsx  ThemeSwitcher.tsx  Toast.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: Dashboard.tsx  Reports.tsx  TicketDetails.tsx  TicketList.tsx  TicketSubmission.tsx
frontend/src/styles/: theme.css
k8s/: deployment.yaml
scripts/: deploy-vultr-k8s.sh  deploy-vultr.sh  lint.fish  quick-deploy.sh  run.sh  security.fish  setup-vultr.sh  setup.fish  stop.sh  test-frontend.sh  test.fish  test.sh  verify_precommit.fish  verify_vscode.fish
shared/constants/: index.ts
shared/types/: api.ts  ticket.ts
src/ticket_assistant/api/: __init__.py  classification.py  combined.py  health.py  main.py  reports.py
src/ticket_assistant/core/: config.py  models.py  utils.py
src/ticket_assistant/services/: groq_classifier.py  report_service.py
tests/: README.md  quick_test.py  run_tests.py  test_fixtures.py  ticket_assistant.db
tests/api/: test_api_integration.py  test_integration.py
tests/database/: check_database.py  check_database_simple.py  test_health.py  test_inspector.py
tests/integration/: test_api_integration.py
tests/mock/: README.md  generate_mock_data.py  simple_mock_generator.py
tests/unit/: test_groq_classifier.py  test_main.py  test_report_service.py
tests/utils/: db-check.sh
